--- a/stack-project.cabal
+++ b/stack-project.cabal
@@ -19,6 +19,8 @@ extra-source-files:
     README.md
     ChangeLog.md
 data-files:
+    files/forward2.txt
+    files/forwardIndex.txt
     files/input.txt
 
 source-repository head
