--- a/stack-project.cabal
+++ b/stack-project.cabal
@@ -19,6 +19,8 @@ extra-source-files:
     README.md
     ChangeLog.md
 data-files:
+    files/indexerInput.txt
+    files/indexerOutput.txt
     files/input.txt
 
 source-repository head
@@ -27,6 +29,7 @@ source-repository head
 
 library
   exposed-modules:
+      Indexer
       PageRank
   other-modules:
       Paths_stack_project
