--- a/stack-project.cabal
+++ b/stack-project.cabal
@@ -19,8 +19,10 @@ extra-source-files:
     README.md
     ChangeLog.md
 data-files:
+    files/edgesOutput.txt
     files/indexerInput.txt
     files/indexerOutput.txt
+    files/pageRankOutput.txt
 
 source-repository head
   type: git
@@ -28,8 +30,10 @@ source-repository head
 
 library
   exposed-modules:
+      Helpers
       Indexer
       PageRank
+      Search
   other-modules:
       Paths_stack_project
   hs-source-dirs:
